// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should render a checked selector 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label {
  background-color: #F0F6FF;
}

.circuit-0:checked + label::before {
  border: 2px solid #3063E9;
}

<input
    checked=""
    class="circuit-0"
    id="selector_3"
    name="name"
    type="radio"
    value="value"
  />,
  .circuit-0 {
  display: block;
  cursor: pointer;
  padding: 16px 24px;
  border-radius: 6px;
  background-color: #FFF;
  text-align: center;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 6px;
  border: 1px solid #E6E6E6;
  -webkit-transition: border 0.1s ease-in-out;
  transition: border 0.1s ease-in-out;
}

.circuit-0:hover {
  background-color: #FAFBFC;
}

.circuit-0:hover::before {
  border-color: #999999;
}

.circuit-0:active {
  background-color: #F5F5F5;
}

.circuit-0:active::before {
  border-color: #333333;
}

<label
    class="circuit-0"
    for="selector_3"
  >
    Label
  </label>,
]
`;

exports[`Selector should render a default selector 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label {
  background-color: #F0F6FF;
}

.circuit-0:checked + label::before {
  border: 2px solid #3063E9;
}

<input
    class="circuit-0"
    id="selector_1"
    name="name"
    type="radio"
    value="value"
  />,
  .circuit-0 {
  display: block;
  cursor: pointer;
  padding: 16px 24px;
  border-radius: 6px;
  background-color: #FFF;
  text-align: center;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 6px;
  border: 1px solid #E6E6E6;
  -webkit-transition: border 0.1s ease-in-out;
  transition: border 0.1s ease-in-out;
}

.circuit-0:hover {
  background-color: #FAFBFC;
}

.circuit-0:hover::before {
  border-color: #999999;
}

.circuit-0:active {
  background-color: #F5F5F5;
}

.circuit-0:active::before {
  border-color: #333333;
}

<label
    class="circuit-0"
    for="selector_1"
  >
    Label
  </label>,
]
`;

exports[`Selector should render a disabled selector 1`] = `
HTMLCollection [
  .circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label {
  background-color: #F0F6FF;
}

.circuit-0:checked + label::before {
  border: 2px solid #3063E9;
}

<input
    class="circuit-0"
    disabled=""
    id="selector_2"
    name="name"
    type="radio"
    value="value"
  />,
  .circuit-0 {
  display: block;
  cursor: pointer;
  padding: 16px 24px;
  border-radius: 6px;
  background-color: #FFF;
  text-align: center;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 6px;
  border: 1px solid #E6E6E6;
  -webkit-transition: border 0.1s ease-in-out;
  transition: border 0.1s ease-in-out;
}

.circuit-0:hover {
  background-color: #FAFBFC;
}

.circuit-0:hover::before {
  border-color: #999999;
}

.circuit-0:active {
  background-color: #F5F5F5;
}

.circuit-0:active::before {
  border-color: #333333;
}

<label
    class="circuit-0"
    disabled=""
    for="selector_2"
  >
    Label
  </label>,
]
`;
